--- a/entry_4.html
+++ b/entry_4.html
@@ -25,10 +25,6 @@
 		<th>File</th>
 	</tr>
 	<tr>
-		<td>2/8/2020</td>
-		<td><a href="entry_1.html">i cant.txt</a></td>
-	</tr>
-	<tr>
 		<td>2/9/2020</td>
 		<td><a href="entry_2.html">the people in my head.txt</a></td>
 	</tr>
@@ -53,7 +49,7 @@
 <div id="apples">
 	<center>im dying.txt</center>
 	<p></p>
-	<p>i havent said anything in a while. ive been so exhausted. i lay in bed and cry and my mom started bringing me food and tries to keep me company. i dont know if im getting worse or better maybe my mind is broken and stuck at this state until i die.</p>
+	<p>i havent said anything in a while. ive been so exhausted. i cant leave my room without feeling anxiety. i lay in bed and cant breathe. my mom started bringing me food and tries to keep me company. i dont know if im getting worse or better maybe my mind is broken and stuck at this state until i die. i cant eat.</p>
 	<p>i was prescribed lorazapam for anxiety.</p>
 </div>
 
