--- a/entry_3.html
+++ b/entry_3.html
@@ -50,6 +50,7 @@
 	<center>talking to myself.txt</center>
 	<p></p>
 	<p>hearing my own voice is better than hearing nothing. where did everybody go.</p>
+	<p>i was prescribed lorazapam for anxiety.</p>
 </div>
 
 </body>
