--- a/entry_5.html
+++ b/entry_5.html
@@ -50,7 +50,7 @@
 	<center>im being watched.txt</center>
 	<p></p>
 	<p>i keep hearing walking outside my door during the night. around 4 am. i hear my parents whispering about me. i cant make out the words but i swear in the middle of the night i heard voices whispering about me from their room when they should be asleep. i try to leave my room but i feel unsafe and shake uncontrollably. what is there and why is it doing this to me.</p>
-	<p>i was prescribed clonzapam and risperidone for paranoia.</p>
+	<p>i was prescribed risperidone for paranoia.</p>
 </div>
 
 </body>
