--- a/entry_4.html
+++ b/entry_4.html
@@ -50,7 +50,7 @@
 	<center>im dying.txt</center>
 	<p></p>
 	<p>i havent said anything in a while. ive been so exhausted. i cant leave my room without feeling anxiety. i lay in bed and cant breathe. my mom started bringing me food and tries to keep me company. i dont know if im getting worse or better maybe my mind is broken and stuck at this state until i die. i cant eat.</p>
-	<p>i was prescribed lorazapam for anxiety.</p>
+	<p>i was prescribed clonzapam for anxiety.</p>
 </div>
 
 </body>
