--- a/entry_7.html
+++ b/entry_7.html
@@ -55,10 +55,9 @@
 </table>
 
 <div id="apples">
-	<center>talking to myself.txt</center>
+	<center>im still hungry.txt</center>
 	<p></p>
-	<p>hearing my own voice is better than hearing nothing. where did everybody go.</p>
-	<p>i was prescribed lorazapam for anxiety.</p>
+	<p>the urges to tear somebody's body open have left. but... it feels like it's still there in the back of my fucked mind. i always thought it must be a phase, ive just been isolated etc. im realizing its a strong trait i cant deny or ignore for long. its not often it becomes out of control but one day im going to give in and take what ive craved all my life. and it'll be euphoric.</p>
 </div>
 
 </body>
