--- a/entry_5.html
+++ b/entry_5.html
@@ -4,9 +4,13 @@
 <head>
 <title>DrewDaKitty.</title>
 	<style type="text/css">
+		body{
+		font-size: 20px;
+		}
+	
 		#apples {border:2px solid gray;
 		position: absolute;
-		width: 350px;
+		width: 400px;
 		height: 500px;
 		top: 10px;
 		padding: 5px;
@@ -43,6 +47,10 @@
 	<tr>
 		<td>3/1/2020</td>
 		<td><a href="entry_6.html">fulfillment.txt</a></td>
+	</tr>
+	<tr>
+		<td>3/7/2020</td>
+		<td><a href="entry_7.html">im still hungry.txt</a></td>
 	</tr>
 </table>
 
