--- a/entry_8.html
+++ b/entry_8.html
@@ -59,10 +59,9 @@
 </table>
 
 <div id="apples">
-	<center>im being watched.txt</center>
+	<center>fucking ruined everything.txt</center>
 	<p></p>
-	<p>i keep hearing walking outside my door during the night. around 4 am. i hear my parents whispering about me. i cant make out the words but i swear in the middle of the night i heard voices whispering about me from their room when they should be asleep. i try to leave my room but i feel unsafe and shake uncontrollably. what is there and why is it doing this to me.</p>
-	<p>i was prescribed risperidone for paranoia.</p>
+	<p>first time ive ever faced a mental issue sober. the days pass by so slow. i think its been months but i cant remember. there has to be something im not seeing that can get me out of this damn feeling. im running out of fucking time. if i lose all chances at living normally from this fucking depression im taking it down with me. nobody will forget me and ill kill every fucking person in my town until im shot down to make it happen.</p>
 </div>
 
 </body>
