--- a/entry_6.html
+++ b/entry_6.html
@@ -52,6 +52,10 @@
 		<td>3/7/2020</td>
 		<td><a href="entry_7.html">im still hungry.txt</a></td>
 	</tr>
+	<tr>
+		<td>3/9/2020</td>
+		<td><a href="entry_8.html">fucking ruined everything.txt</a></td>
+	</tr>
 </table>
 
 <div id="apples">
