--- a/entry_10.html
+++ b/entry_10.html
@@ -18,7 +18,14 @@
 	</style>
 </head>
 
+
 <body>
+
+<script>
+function myFunction() {
+  alert("The requested file is not accessible on this server.\n(Invalid Permissions)");
+}
+</script>
 
 <table border="1" width="350" cellpadding="4" cellspacing="0">
 	<tr>
@@ -67,9 +74,12 @@
 </table>
 
 <div id="apples">
-	<center>the people in my head.txt</center>
+	<center>it hurts.txt</center>
 	<p></p>
-	<p>its so fucking quiet. the silence makes my paranoia worse. i hear things that aren't there and the only thing that calms me down is talking to people in my head. its nice to talk and have friends, even if they arent real. i have a therapist and shes been helping me get through this. shes in my head, but i feel like shes real.</p>
+	<p>i dont want to live like this. i have no friends i have nobody to hold onto. i cant take it this feeling is killing me i dont want to be awake anymore. i cant enjoy any activity at all and its preventing me from being happy. every moment is agony and i want it to stop so bad. my doctor is my last hope and i couldnt be more thankful for my parents and him having faith and helping me. every day i see him i feel like theres a chance i can enjoy living again.</p>
+	<p>i was recently prescribed dexedrine twice daily.</p>
+	<p>i was recently prescribed a higher dose of lorazepam and clonazepam.</p>
+	<p>might request buspar as an alternative anxiolytic.</p>
 </div>
 
 </body>
