--- a/entry_8.html
+++ b/entry_8.html
@@ -54,16 +54,20 @@
 	</tr>
 	<tr>
 		<td>3/9/2020</td>
-		<td><a href="entry_8.html">fucking ruined everything.txt</a></td>
+		<td><a href="entry_8.html">ruined everything.txt</a></td>
 	</tr>
 	<tr>
 		<td>3/11/2020</td>
 		<td><a href="entry_9.html">im sorry.mp3</a></td>
 	</tr>
+	<tr>
+		<td>4/24/2020</td>
+		<td><a href="entry_10.html">it hurts.txt</a></td>
+	</tr>
 </table>
 
 <div id="apples">
-	<center>fucking ruined everything.txt</center>
+	<center>ruined everything.txt</center>
 	<p></p>
 	<p>first time ive ever faced a mental issue sober. the days pass by so slow. i think its been months but i cant remember. there has to be something im not seeing that can get me out of this damn feeling. im running out of fucking time. if i lose all chances at living normally from this fucking depression im taking it down with me. nobody will forget me and ill kill every fucking person in my town until im shot down to make it happen.</p>
 </div>
