--- a/true_index.html
+++ b/true_index.html
@@ -20,6 +20,12 @@
 
 <body>
 
+<script>
+function myFunction() {
+  alert("The requested file is not accessible on this server.\n(Invalid Permissions)");
+}
+</script>
+
 <table border="1" width="350" cellpadding="4" cellspacing="0">
 	<tr>
 		<th colspan="2"><h3>Entries</h3></th>
@@ -67,9 +73,7 @@
 </table>
 
 <div id="apples">
-	<center>the people in my head.txt</center>
-	<p></p>
-	<p>its so fucking quiet. the silence makes my paranoia worse. i hear things that aren't there and the only thing that calms me down is talking to people in my head. its nice to talk and have friends, even if they arent real. i have a therapist and shes been helping me get through this. shes in my head, but i feel like shes real.</p>
+	<center>Select a file to view it here.</center>
 </div>
 
 </body>
