--- a/entry_9.html
+++ b/entry_9.html
@@ -54,11 +54,15 @@
 	</tr>
 	<tr>
 		<td>3/9/2020</td>
-		<td><a href="entry_8.html">fucking ruined everything.txt</a></td>
+		<td><a href="entry_8.html">ruined everything.txt</a></td>
 	</tr>
 	<tr>
 		<td>3/11/2020</td>
 		<td><a href="entry_9.html">im sorry.mp3</a></td>
+	</tr>
+	<tr>
+		<td>4/24/2020</td>
+		<td><a href="entry_10.html">it hurts.txt</a></td>
 	</tr>
 </table>
 
