--- a/index.html
+++ b/index.html
@@ -2,68 +2,20 @@
 
 <html>
 <head>
+
 <title>from drew.</title>
-	<style type="text/css">
-		body{
-		font-size: 20px;
-		}
-	
-		#apples {border:2px solid gray;
-		position: absolute;
-		width: 400px;
-		height: 500px;
-		top: 10px;
-		padding: 5px;
-		left: 375px;}
-	</style>
 </head>
 
 <body>
 
-<table border="1" width="350" cellpadding="4" cellspacing="0">
-	<tr>
-		<th colspan="2"><h3>Entries</h3></th>
-	</tr>
-	<tr>
-		<th>Date</th>
-		<th>File</th>
-	</tr>
-	<tr>
-		<td>2/9/2020</td>
-		<td><a href="entry_2.html">the people in my head.txt</a></td>
-	</tr>
-	<tr>
-		<td>2/10/2020</td>
-		<td><a href="entry_3.html">talking to myself.txt</a></td>
-	</tr>
-	<tr>
-		<td>2/20/2020</td>
-		<td><a href="entry_4.html">im dying.txt</a></td>
-	</tr>
-	<tr>
-		<td>2/28/2020</td>
-		<td><a href="entry_5.html">im being watched.txt</a></td>
-	</tr>
-	<tr>
-		<td>3/1/2020</td>
-		<td><a href="entry_6.html">fulfillment.txt</a></td>
-	</tr>
-	<tr>
-		<td>3/7/2020</td>
-		<td><a href="entry_7.html">im still hungry.txt</a></td>
-	</tr>
-	<tr>
-		<td>3/9/2020</td>
-		<td><a href="entry_8.html">fucking ruined everything.txt</a></td>
-	</tr>
-	<tr>
-		<td>3/11/2020</td>
-		<td><a href="entry_9.html">im sorry.mp3</a></td>
-	</tr>
-</table>
+<div>
 
-<div id="apples">
-	<center>Select a file to view it here.</center>
+<p><font size="+3"><b>Not Found</b></font></p>
+<p> </p>
+<p>The requested URL was not found on this server.</p>
+<p> </p>
+<hr> </hr>
+
 </div>
 
 </body>
